--- a/foodLocweb/index.html
+++ b/foodLocweb/index.html
@@ -33,9 +33,9 @@
 
                 <a href="" class="sidenav-trigger black-text" data-target="mobile-menu"><i
                         class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
+                <ul class="center hide-on-med-and-down">
                     <li><a href="#" class="black-text">Home</a></li>
-                    <li><a href="#aboutus" class="black-text">About us</a></li>
+                    <li><a href="#aboutus" class="black-text">Locate</a></li>
                     <li><a href="#constructions" class="black-text">Our Restaurants</a></li>
                     <li><a href="#appointment" class="black-text">Login</a></li>
                     <li><a href="#constructions" class="black-text">Signup</a></li>
@@ -83,6 +83,24 @@
 
 
     </header>
+
+
+
+    <!--footer-->
+    <div class="container">
+
+        <ul class="contact">
+
+            <li><a href="#" class="btn-floating btn-medium blue"><i class="large material-icons ">facebook</i></a></li>
+            <li><a href="#" class="btn-floating btn-medium blue"><i class="fa fa-twitter "></i></a></li>
+            <li><a href="#" class="btn-floating btn-medium purple"><i class="fa fa-instagram "></i></a></li>
+            
+            <p>&copy; Raphasha Unlimited. All rights reserved</p>
+        </ul>
+
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
