--- a/foodLocweb/index.html
+++ b/foodLocweb/index.html
@@ -37,7 +37,7 @@
                     <li><a href="#" class="black-text">Home</a></li>
                     <li><a href="#aboutus" class="black-text">Locate</a></li>
                     <li><a href="#constructions" class="black-text">Our Restaurants</a></li>
-                    <li><a href="#appointment" class="black-text">Login</a></li>
+                    <li><a href="loogin.html" class="black-text">Login</a></li>
                     <li><a href="#constructions" class="black-text">Signup</a></li>
                     <li><a href="#contacts" class="black-text">Contact</a></li>
                     <li>
