added signup inputs

--- a/foodLocweb/loogin.html
+++ b/foodLocweb/loogin.html
@@ -34,11 +34,11 @@
                 <a href="" class="sidenav-trigger black-text" data-target="mobile-menu"><i
                         class="material-icons">menu</i></a>
                 <ul class="center hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Home</a></li>
+                    <li><a href="index.html" class="black-text">Home</a></li>
                     <li><a href="#aboutus" class="black-text">Locate</a></li>
                     <li><a href="#constructions" class="black-text">Our Restaurants</a></li>
                     <li><a href="loogin.html" class="black-text">Login</a></li>
-                    <li><a href="#constructions" class="black-text">Signup</a></li>
+                    <li><a href="signup.html" class="black-text">Signup</a></li>
                     <li><a href="#contacts" class="black-text">Contact</a></li>
                     <li>
                         <a href="#" class="btn-floating btn-small indigo">
@@ -85,7 +85,7 @@
     </header>
 
     <!--form for login-->
-    <div class="container blue-text grey lighten-4 " > 
+    <div class="container blue-text grey lighten-1 " > 
         <form action="">
             <div class="center">
                 <h3>Login</h3>
@@ -107,6 +107,11 @@
         </form>
     </div>
 
+    <div class="parallax-container">
+        <div class="parallax">
+            <img src="imgs/potjie.jpg" alt="Where you go, you need something to eat" class="responsive-img">
+        </div>
+    </div>
 
     <!--footer-->
     <footer class="page-footer grey">
