--- a/mysite/index.html
+++ b/mysite/index.html
@@ -270,7 +270,7 @@
                 <div class="center">
                     <p><strong>Cel: </strong> 066 091 9078 <strong>/</strong> 068 070 6154</p>
                     <p><strong>e-mail: </strong> raphasha10111@gmail.com</p>
-                    <p><strong>Physical Address: </strong> <a href="#">South Africa, Gauteng,
+                    <p><strong>Physical Address: </strong> <a href="https://www.google.com/maps/@-26.1079328,28.1037373,18z">South Africa, Gauteng,
                             Johannesburg, Alexandra, 113 17th Roosevelt Avenue</a></p>
                 </div>
                
