fixed down  button

--- a/mysite/index.html
+++ b/mysite/index.html
@@ -194,7 +194,7 @@
                 
                 <img src="imgs/study.jpg" alt="" class="studying">
                 <div class="controls2">
-                    <i class="material-icons large blue-text" id="udtn">arrow_downward</i>
+                    <i class="material-icons large blue-text" id="dbtn">arrow_downward</i>
                 </div>
 
                 <div id="cycle">
