--- a/mysite/index.html
+++ b/mysite/index.html
@@ -313,7 +313,7 @@
                             <i class="fa fa-whatsapp"></i>
                         </a>
 
-                        <a href="https://githhub.com/RAPHASHA" class="btn-floating btn-medium black">
+                        <a href="https://github.com/RAPHASHA" class="btn-floating btn-medium black">
                             <i class="fa fa-github"></i>
                         </a>
                     </li>
