--- a/foodLocweb/index.html
+++ b/foodLocweb/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/headerstyle.css">
 
     
 
@@ -25,64 +26,19 @@
 
 <body>
 
-    <header>
-        <div class="container center">
-            <h2><a href="#" class="brand-logo blue-text "><i class="medium material-icons">location_on</i>FoodLoc</a>
-            </h2>
-            <nav class="nav-wrapper transparent">
+    <div class="header">
 
-                <a href="" class="sidenav-trigger black-text" data-target="mobile-menu"><i
-                        class="material-icons">menu</i></a>
-                <ul class="center hide-on-med-and-down">
-                    <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="#aboutus" class="black-text">Locate</a></li>
-                    <li><a href="#constructions" class="black-text">Our Restaurants</a></li>
-                    <li><a href="loogin.html" class="black-text">Login</a></li>
-                    <li><a href="signup.html" class="black-text">Signup</a></li>
-                    <li><a href="#contacts" class="black-text">Contact</a></li>
-                    <li>
-                        <a href="#" class="btn-floating btn-small indigo">
-                            <i class="material-icons">facebook</i>
-                        </a>
-                        <a href="#" class="btn-floating btn-small blue">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a href="#" class="btn-floating btn-small purple">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-                    </li>
+        <nav  >
+            <img src="imgs/icon.png" class="logo">
+            <ul class="center">
+                <li>Home</li>
+                <li>login</li>
+                <li>SignUp</li>
+                <li>locate</li>
+            </ul>
+        </nav>
 
-                </ul>
-
-                <ul class="sidenav" id="mobile-menu">
-                    <li><a href="#" class="black-text">Home</a></li>
-                    <li><a href="#aboutus" class="black-text">About us</a></li>
-                    <li><a href="#constructions" class="black-text">Our Restaurants</a></li>
-                    <li><a href="#appointment" class="black-text">Login</a></li>
-                    <li><a href="#constructions" class="black-text">Signup</a></li>
-                    <li><a href="#contacts" class="black-text">Contact</a></li>
-                    <li>
-                        <a href="#" class="btn-floating btn-small indigo">
-                            <i class="material-icons">facebook</i>
-                        </a>
-                        <a href="#" class="btn-floating btn-small blue">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a href="#" class="btn-floating btn-small purple">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-                    </li>
-                </ul>
-
-            </nav>
-
-        </div>
-
-       
-
-
-
-    </header>
+    </div>
 
 
 
